--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -10,8 +10,30 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
+  build:
+    name: Go Build
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: ["1.19", "1.20", "1.21.x"]
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v4
+        with:
+          go-version: ${{ matrix.go-version }}
+      # You can test your matrix by printing the current Go version
+      - name: Navigate to src folder
+        run: cd src
+      - name: Display Go version
+        run: go version
+      - name: Install Dependencies
+        run: go get .
+      - name: go build
+        run: GOARCH=amd64 GOOS=linux go build -o ./bin/bootstrap ./cmd/main.go
   terraform:
-    name: Deploy static-site
+    name: Terraform Plan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
