bugfix: add debug commands for testing

--- a/.github/workflows/goterraform.yaml
+++ b/.github/workflows/goterraform.yaml
@@ -43,11 +43,14 @@ jobs:
       - name: go build
         run: cd src && GOARCH=amd64 GOOS=linux go build -o ./bin/bootstrap ./cmd/main.go\
 
+      - name: list files in root of repo
+        run: ls -ltra && cd /src && ls -ltra && cd /bin && ls -ltra
+
       - name: archive binary
         uses: actions/upload-artifact@v4
         with:
           name: bootstrap
-          path: /src/bin/
+          path: ./src/bin/bootstrap
 
   job_2:
     name: Terraform
