--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,4 +1,4 @@
-name: build go and deploy terraform
+name: deploy terraform
 
 on:
   workflow_call:
@@ -14,44 +14,8 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
-  job_1:
-    name: Go Build
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        #go-version: ["1.19", "1.20", "1.21.x"]
-        go-version: ["1.21.x"]
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Go ${{ matrix.go-version }}
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ matrix.go-version }}
-
-      - name: display go version
-        run: cd src && go version
-
-      - name: install dependencies
-        run: cd src && go get -u -d ./...
-
-      - name: go test
-        run: cd src && go test ./...
-        continue-on-error: false
-
-      - name: go build
-        run: cd src && GOARCH=amd64 GOOS=linux go build -o ./bin/bootstrap ./cmd/main.go
-
-      - name: archive binary
-        uses: actions/upload-artifact@v4
-        with:
-          name: bootstrap
-          path: src/bin/bootstrap
-
-  job_2:
-    name: Terraform
-    needs: job_1
+  terraform:
+    name: terraform
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
@@ -59,12 +23,6 @@ jobs:
 
       - name: configure terraform
         uses: hashicorp/setup-terraform@v2
-
-      - name: download binary
-        uses: actions/download-artifact@v4
-        with:
-          name: bootstrap
-          path: src/bin/
 
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v2
