feat: updating token permissions

--- a/.github/workflows/goterraform.yaml
+++ b/.github/workflows/goterraform.yaml
@@ -12,6 +12,7 @@ env:
 permissions:
   id-token: write # This is required for requesting the JWT
   contents: read # This is required for actions/checkout
+  pull-requests: write # This is required to update the pull request with the plan
 
 jobs:
   job_1:
