--- a/.github/workflows/terraform-destroy.yaml
+++ b/.github/workflows/terraform-destroy.yaml
@@ -34,6 +34,6 @@ jobs:
         run: terraform init
 
       - name: Terraform Destroy
-        id: plan
+        id: destroy
         run: terraform destroy --auto-approve
         continue-on-error: false
