--- a/.github/workflows/goterraform.yaml
+++ b/.github/workflows/goterraform.yaml
@@ -13,6 +13,7 @@ permissions:
   id-token: write # This is required for requesting the JWT
   contents: read # This is required for actions/checkout
   pull-requests: write # This is required to update the pull request with the plan
+  issues: write # This is required to create issues
 
 jobs:
   job_1:
